# cert-retrieval-lambda

./: Cargo.toml  ExamplePlaintextFile.base64  attestation_doc  encryptedfile
src/: lib.rs  main.rs  main.rs.1  main.rs.2  main.rs.bak
