[package]
name = "envars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.8" # Latest stable version of aws-config
aws-sdk-kms = "1.47.0"
aws-sdk-s3 = "1.56.0"
aws-sdk-secretsmanager = "1.50.0" # Latest stable version of aws-sdk-secretsmanager
lambda_runtime = "0.13.0"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# For lib.rs
aws-nitro-enclaves-cose = "0.5.2"
base64 = "0.22.1"
hex = "0.4.3"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.14", features = ["blocking"] }
serde_cbor = "0.11.2"
zip = "2.2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

